--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
@@ -283,6 +284,7 @@ button,
 [type=reset],
 [type=submit] {
   -webkit-appearance: button;
+  appearance: button;
 }
 
 button:not(:disabled),
@@ -311,6 +313,7 @@ input[type=time],
 input[type=datetime-local],
 input[type=month] {
   -webkit-appearance: listbox;
+  appearance: listbox;
 }
 
 textarea {
@@ -349,10 +352,12 @@ progress {
 [type=search] {
   outline-offset: -2px;
   -webkit-appearance: none;
+  appearance: none;
 }
 
 [type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
+  appearance: none;
 }
 
 ::-webkit-file-upload-button {
